# sap2000-bridge

./: .gitignore  README.md  pyproject.toml
docs/: agent-policy.md  checkpoint-workflow.md  codex-agent-playbook.md  local-agent-operations.md  openclaw-runtime-bridge-agent.md  windows-real-com-smoke.md
examples/: agent_readonly_smoke.py  manual_real_attach_diagnostics.py  manual_real_connect.py  manual_real_frames.py  manual_real_joints.py  manual_real_launch.py  manual_real_load_cases.py  manual_real_load_combinations.py  manual_real_load_patterns.py  manual_real_materials.py  manual_real_metadata_diagnostics.py  manual_real_open_model.py  manual_real_point_diagnostics.py  manual_real_sections.py  manual_real_units.py
prompts/: codex-verification-agent.txt  openclaw-runtime-readonly.txt
scripts/: agent_readonly_smoke.ps1  start_bridge_comtypes.ps1  start_bridge_fake.ps1  stop_bridge.ps1
src/bridge/: __init__.py  agent_client.py  auth.py  config.py  errors.py
src/bridge/adapters/: __init__.py  base.py  comtypes_adapter.py  fake_adapter.py  unavailable_adapter.py
src/bridge/api/: __init__.py  main.py  routes_analysis.py  routes_audit.py  routes_health.py  routes_model.py  (+3 more)
tests/: __init__.py  conftest.py  test_agent_client_policy.py  test_analysis_routes.py  test_api_contracts.py  test_audit_safety.py  test_comtypes_placeholder.py  test_config.py  test_contracts.py  test_cors.py  test_health.py  test_install_validator.py  test_local_agent_operations_pack.py  test_model_metadata_routes.py  test_model_routes.py  test_results_routes.py  test_session_routes.py
(+15 files in other folders)
