[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sap2000-local-bridge"
version = "0.1.0"
description = "Local read-only FastAPI bridge for SAP2000 automation experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "typing-extensions",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]
sap2000 = [
    "comtypes; platform_system == 'Windows'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
